--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
+
 {% load staticfiles %}
 
 <html>
+
     <head>
         <title>Rango</title>
     </head>
-    
+
     <body>
         <h1>Rango says...</h1>
         <div>
@@ -14,6 +16,7 @@
         </div>
 
         <div>
+            <h2>Most Liked Categories</h2>
         {% if categories %}
             <ul>
             {% for category in categories %}
@@ -26,10 +29,22 @@
         </div>
 
         <div>
-            <a href="/rango/about/">About</a><br />
-            <img src="{% static "images/rango.jpg" %}"
-                 alt="Picture of Rango" /> 
+            <h2>Most Viewed Pages</h2>
+        {% if pages %}
+            <ul>
+            {% for page in pages %}
+                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
+            </ul>
+        {% else %}
+            <strong>There are no pages present.</strong>
+        {% endif %}
         </div>
 
+        <div>
+            <a href="/rango/about/">About</a><br />
+            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+        </div>
     </body>
+
 </html>
