--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -9,7 +9,7 @@
 <h1>Rango says...</h1>
 <div>
     {% if user.is_authenticated %}
-        Hi {{ user.username }}!
+    howdy {{ user.username }}!
     {% else %}
         hey there partner!
     {% endif %}
